@@ -1385,6 +1385,41 @@ function api_device_update_host_template($device_id, $device_template_id) {
 }
 
 /**
+ * api_device_change_field_match - Checks the global $device_change_fileds array
+ *   against the field name and returns true or false if it matches the rule
+ *
+ * This function can be used by plugins to allow the modification of additional
+ * device fields from the change device rule.
+ *
+ * @param  string      The field name to check
+ *
+ * @return bool        True or false if it matches one of the rules
+ */
+function api_device_change_field_match($field_name) {
+	global $device_change_fields;
+
+	$matches = false;
+
+	foreach($device_change_fields as $rule_type => $rules) {
+		foreach($rules as $field_rule) {
+			if ($rule_type == 'preg_field') {
+				if (preg_match($field_rule, $field_name)) {
+					$matches = true;
+					break 2;
+				}
+			} elseif ($rule_type == 'match_field') {
+				if ($field_rule == $field_name) {
+					$matches = true;
+					break 2;
+				}
+			}
+		}
+	}
+
+	return $matches;
+}
+
+/**
  * api_device_template_sync_template - updates the device template mapping for all devices mapped to a template
  *
  * @param  (int)       The device template to synchronize
